src/grammar.output
Useless nonterminals

   array_elem


Terminals which are not used

   T_TFLOAT
   T_TCHAR
   T_TBOOL
   T_CEQUAL
   T_CNEQUAL
   T_CLT
   T_CLE
   T_CGT
   T_CGE
   T_DOT


Useless rules

   54 array_elem: ident T_LBRACKET expr T_RBRACKET


State 20 conflicts: 1 shift/reduce
State 55 conflicts: 4 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stats

    2 stats: stat
    3      | stats stat

    4 stat: var_dec T_SEMICOLON
    5     | func_dec
    6     | expr T_SEMICOLON
    7     | T_RETURN expr T_SEMICOLON
    8     | if_stat
    9     | for_stm
   10     | while_stm

   11 block: T_LBRACE stats T_RBRACE

   12 func_dec: typename ident T_LPAREN varvec T_RPAREN block
   13         | T_EXTERN typename ident T_LPAREN varvec T_RPAREN T_SEMICOLON

   14 varvec: varvec T_COMMA var_dec
   15       | var_dec
   16       | /* empty */

   17 var_dec: typename ident
   18        | typename ident T_ASSIGN expr

   19 ident: T_IDENTIFIER

   20 typename: T_TINT
   21         | T_TDOUBLE
   22         | T_TVOID
   23         | T_TSTRING
   24         | array_typename

   25 array_typename: typename T_LBRACKET T_INTEGER T_RBRACKET

   26 assignmemt: ident T_ASSIGN expr

   27 expr: assignmemt
   28     | number
   29     | ident
   30     | expr T_PLUS expr
   31     | expr T_MINUS expr
   32     | expr T_MULT expr
   33     | expr T_DIV expr
   34     | T_LPAREN expr T_LPAREN
   35     | T_LITERAL
   36     | call

   37 number: T_INTEGER
   38       | T_DOUBLE

   39 call: ident T_LPAREN call_args T_RPAREN

   40 call_args: call_args T_COMMA expr
   41          | expr
   42          | /* empty */

   43 for_stm: T_TFOR T_LPAREN expr T_SEMICOLON expr T_SEMICOLON expr T_RPAREN block
   44        | T_TFOR T_LPAREN expr T_SEMICOLON T_SEMICOLON T_RPAREN block
   45        | T_TFOR T_LPAREN T_SEMICOLON expr T_SEMICOLON T_RPAREN block
   46        | T_TFOR T_LPAREN T_SEMICOLON T_SEMICOLON expr T_RPAREN block
   47        | T_TFOR T_LPAREN expr T_SEMICOLON expr T_SEMICOLON T_RPAREN block
   48        | T_TFOR T_LPAREN expr T_SEMICOLON T_SEMICOLON expr T_RPAREN block
   49        | T_TFOR T_LPAREN T_SEMICOLON expr T_SEMICOLON expr T_RPAREN block
   50        | T_TFOR T_LPAREN T_SEMICOLON T_SEMICOLON T_RPAREN block

   51 while_stm: T_TWHILE T_LPAREN expr T_RPAREN block

   52 if_stat: T_IF T_LPAREN expr T_RPAREN block
   53        | T_IF T_LPAREN expr T_RPAREN block T_ELSE block


Terminals, with rules where they appear

$end (0) 0
error (256)
T_TINT (258) 20
T_TDOUBLE (259) 21
T_TFLOAT (260)
T_TCHAR (261)
T_TBOOL (262)
T_TVOID (263) 22
T_TSTRING (264) 23
T_EXTERN (265) 13
T_RETURN (266) 7
T_IDENTIFIER (267) 19
T_INTEGER (268) 25 37
T_DOUBLE (269) 38
T_LITERAL (270) 35
T_ASSIGN (271) 18 26
T_CEQUAL (272)
T_CNEQUAL (273)
T_CLT (274)
T_CLE (275)
T_CGT (276)
T_CGE (277)
T_TFOR (278) 43 44 45 46 47 48 49 50
T_TWHILE (279) 51
T_IF (280) 52 53
T_ELSE (281) 53
T_LPAREN (282) 12 13 34 39 43 44 45 46 47 48 49 50 51 52 53
T_RPAREN (283) 12 13 39 43 44 45 46 47 48 49 50 51 52 53
T_LBRACE (284) 11
T_RBRACE (285) 11
T_LBRACKET (286) 25
T_RBRACKET (287) 25
T_SEMICOLON (288) 4 6 7 13 43 44 45 46 47 48 49 50
LOWER_THAN_ELSE (289)
T_MINUS (290) 31
T_PLUS (291) 30
T_DIV (292) 33
T_MULT (293) 32
T_COMMA (294) 14 40
T_DOT (295)


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
program (42)
    on left: 1, on right: 0
stats (43)
    on left: 2 3, on right: 1 3 11
stat (44)
    on left: 4 5 6 7 8 9 10, on right: 2 3
block (45)
    on left: 11, on right: 12 43 44 45 46 47 48 49 50 51 52 53
func_dec (46)
    on left: 12 13, on right: 5
varvec (47)
    on left: 14 15 16, on right: 12 13 14
var_dec (48)
    on left: 17 18, on right: 4 14 15
ident (49)
    on left: 19, on right: 12 13 17 18 26 29 39
typename (50)
    on left: 20 21 22 23 24, on right: 12 13 17 18 25
array_typename (51)
    on left: 25, on right: 24
assignmemt (52)
    on left: 26, on right: 27
expr (53)
    on left: 27 28 29 30 31 32 33 34 35 36, on right: 6 7 18 26 30
    31 32 33 34 40 41 43 44 45 46 47 48 49 51 52 53
number (54)
    on left: 37 38, on right: 28
call (55)
    on left: 39, on right: 36
call_args (56)
    on left: 40 41 42, on right: 39 40
for_stm (57)
    on left: 43 44 45 46 47 48 49 50, on right: 9
while_stm (58)
    on left: 51, on right: 10
if_stat (59)
    on left: 52 53, on right: 8


state 0

    0 $accept: . program $end

    T_TINT        shift, and go to state 1
    T_TDOUBLE     shift, and go to state 2
    T_TVOID       shift, and go to state 3
    T_TSTRING     shift, and go to state 4
    T_EXTERN      shift, and go to state 5
    T_RETURN      shift, and go to state 6
    T_IDENTIFIER  shift, and go to state 7
    T_INTEGER     shift, and go to state 8
    T_DOUBLE      shift, and go to state 9
    T_LITERAL     shift, and go to state 10
    T_TFOR        shift, and go to state 11
    T_TWHILE      shift, and go to state 12
    T_IF          shift, and go to state 13
    T_LPAREN      shift, and go to state 14

    program         go to state 15
    stats           go to state 16
    stat            go to state 17
    func_dec        go to state 18
    var_dec         go to state 19
    ident           go to state 20
    typename        go to state 21
    array_typename  go to state 22
    assignmemt      go to state 23
    expr            go to state 24
    number          go to state 25
    call            go to state 26
    for_stm         go to state 27
    while_stm       go to state 28
    if_stat         go to state 29


state 1

   20 typename: T_TINT .

    $default  reduce using rule 20 (typename)


state 2

   21 typename: T_TDOUBLE .

    $default  reduce using rule 21 (typename)


state 3

   22 typename: T_TVOID .

    $default  reduce using rule 22 (typename)


state 4

   23 typename: T_TSTRING .

    $default  reduce using rule 23 (typename)


state 5

   13 func_dec: T_EXTERN . typename ident T_LPAREN varvec T_RPAREN T_SEMICOLON

    T_TINT     shift, and go to state 1
    T_TDOUBLE  shift, and go to state 2
    T_TVOID    shift, and go to state 3
    T_TSTRING  shift, and go to state 4

    typename        go to state 30
    array_typename  go to state 22


state 6

    7 stat: T_RETURN . expr T_SEMICOLON

    T_IDENTIFIER  shift, and go to state 7
    T_INTEGER     shift, and go to state 8
    T_DOUBLE      shift, and go to state 9
    T_LITERAL     shift, and go to state 10
    T_LPAREN      shift, and go to state 14

    ident       go to state 20
    assignmemt  go to state 23
    expr        go to state 31
    number      go to state 25
    call        go to state 26


state 7

   19 ident: T_IDENTIFIER .

    $default  reduce using rule 19 (ident)


state 8

   37 number: T_INTEGER .

    $default  reduce using rule 37 (number)


state 9

   38 number: T_DOUBLE .

    $default  reduce using rule 38 (number)


state 10

   35 expr: T_LITERAL .

    $default  reduce using rule 35 (expr)


state 11

   43 for_stm: T_TFOR . T_LPAREN expr T_SEMICOLON expr T_SEMICOLON expr T_RPAREN block
   44        | T_TFOR . T_LPAREN expr T_SEMICOLON T_SEMICOLON T_RPAREN block
   45        | T_TFOR . T_LPAREN T_SEMICOLON expr T_SEMICOLON T_RPAREN block
   46        | T_TFOR . T_LPAREN T_SEMICOLON T_SEMICOLON expr T_RPAREN block
   47        | T_TFOR . T_LPAREN expr T_SEMICOLON expr T_SEMICOLON T_RPAREN block
   48        | T_TFOR . T_LPAREN expr T_SEMICOLON T_SEMICOLON expr T_RPAREN block
   49        | T_TFOR . T_LPAREN T_SEMICOLON expr T_SEMICOLON expr T_RPAREN block
   50        | T_TFOR . T_LPAREN T_SEMICOLON T_SEMICOLON T_RPAREN block

    T_LPAREN  shift, and go to state 32


state 12

   51 while_stm: T_TWHILE . T_LPAREN expr T_RPAREN block

    T_LPAREN  shift, and go to state 33


state 13

   52 if_stat: T_IF . T_LPAREN expr T_RPAREN block
   53        | T_IF . T_LPAREN expr T_RPAREN block T_ELSE block

    T_LPAREN  shift, and go to state 34


state 14

   34 expr: T_LPAREN . expr T_LPAREN

    T_IDENTIFIER  shift, and go to state 7
    T_INTEGER     shift, and go to state 8
    T_DOUBLE      shift, and go to state 9
    T_LITERAL     shift, and go to state 10
    T_LPAREN      shift, and go to state 14

    ident       go to state 20
    assignmemt  go to state 23
    expr        go to state 35
    number      go to state 25
    call        go to state 26


state 15

    0 $accept: program . $end

    $end  shift, and go to state 36


state 16

    1 program: stats .
    3 stats: stats . stat

    T_TINT        shift, and go to state 1
    T_TDOUBLE     shift, and go to state 2
    T_TVOID       shift, and go to state 3
    T_TSTRING     shift, and go to state 4
    T_EXTERN      shift, and go to state 5
    T_RETURN      shift, and go to state 6
    T_IDENTIFIER  shift, and go to state 7
    T_INTEGER     shift, and go to state 8
    T_DOUBLE      shift, and go to state 9
    T_LITERAL     shift, and go to state 10
    T_TFOR        shift, and go to state 11
    T_TWHILE      shift, and go to state 12
    T_IF          shift, and go to state 13
    T_LPAREN      shift, and go to state 14

    $default  reduce using rule 1 (program)

    stat            go to state 37
    func_dec        go to state 18
    var_dec         go to state 19
    ident           go to state 20
    typename        go to state 21
    array_typename  go to state 22
    assignmemt      go to state 23
    expr            go to state 24
    number          go to state 25
    call            go to state 26
    for_stm         go to state 27
    while_stm       go to state 28
    if_stat         go to state 29


state 17

    2 stats: stat .

    $default  reduce using rule 2 (stats)


state 18

    5 stat: func_dec .

    $default  reduce using rule 5 (stat)


state 19

    4 stat: var_dec . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 38


state 20

   26 assignmemt: ident . T_ASSIGN expr
   29 expr: ident .
   39 call: ident . T_LPAREN call_args T_RPAREN

    T_ASSIGN  shift, and go to state 39
    T_LPAREN  shift, and go to state 40

    T_LPAREN  [reduce using rule 29 (expr)]
    $default  reduce using rule 29 (expr)


state 21

   12 func_dec: typename . ident T_LPAREN varvec T_RPAREN block
   17 var_dec: typename . ident
   18        | typename . ident T_ASSIGN expr
   25 array_typename: typename . T_LBRACKET T_INTEGER T_RBRACKET

    T_IDENTIFIER  shift, and go to state 7
    T_LBRACKET    shift, and go to state 41

    ident  go to state 42


state 22

   24 typename: array_typename .

    $default  reduce using rule 24 (typename)


state 23

   27 expr: assignmemt .

    $default  reduce using rule 27 (expr)


state 24

    6 stat: expr . T_SEMICOLON
   30 expr: expr . T_PLUS expr
   31     | expr . T_MINUS expr
   32     | expr . T_MULT expr
   33     | expr . T_DIV expr

    T_SEMICOLON  shift, and go to state 43
    T_MINUS      shift, and go to state 44
    T_PLUS       shift, and go to state 45
    T_DIV        shift, and go to state 46
    T_MULT       shift, and go to state 47


state 25

   28 expr: number .

    $default  reduce using rule 28 (expr)


state 26

   36 expr: call .

    $default  reduce using rule 36 (expr)


state 27

    9 stat: for_stm .

    $default  reduce using rule 9 (stat)


state 28

   10 stat: while_stm .

    $default  reduce using rule 10 (stat)


state 29

    8 stat: if_stat .

    $default  reduce using rule 8 (stat)


state 30

   13 func_dec: T_EXTERN typename . ident T_LPAREN varvec T_RPAREN T_SEMICOLON
   25 array_typename: typename . T_LBRACKET T_INTEGER T_RBRACKET

    T_IDENTIFIER  shift, and go to state 7
    T_LBRACKET    shift, and go to state 41

    ident  go to state 48


state 31

    7 stat: T_RETURN expr . T_SEMICOLON
   30 expr: expr . T_PLUS expr
   31     | expr . T_MINUS expr
   32     | expr . T_MULT expr
   33     | expr . T_DIV expr

    T_SEMICOLON  shift, and go to state 49
    T_MINUS      shift, and go to state 44
    T_PLUS       shift, and go to state 45
    T_DIV        shift, and go to state 46
    T_MULT       shift, and go to state 47


state 32

   43 for_stm: T_TFOR T_LPAREN . expr T_SEMICOLON expr T_SEMICOLON expr T_RPAREN block
   44        | T_TFOR T_LPAREN . expr T_SEMICOLON T_SEMICOLON T_RPAREN block
   45        | T_TFOR T_LPAREN . T_SEMICOLON expr T_SEMICOLON T_RPAREN block
   46        | T_TFOR T_LPAREN . T_SEMICOLON T_SEMICOLON expr T_RPAREN block
   47        | T_TFOR T_LPAREN . expr T_SEMICOLON expr T_SEMICOLON T_RPAREN block
   48        | T_TFOR T_LPAREN . expr T_SEMICOLON T_SEMICOLON expr T_RPAREN block
   49        | T_TFOR T_LPAREN . T_SEMICOLON expr T_SEMICOLON expr T_RPAREN block
   50        | T_TFOR T_LPAREN . T_SEMICOLON T_SEMICOLON T_RPAREN block

    T_IDENTIFIER  shift, and go to state 7
    T_INTEGER     shift, and go to state 8
    T_DOUBLE      shift, and go to state 9
    T_LITERAL     shift, and go to state 10
    T_LPAREN      shift, and go to state 14
    T_SEMICOLON   shift, and go to state 50

    ident       go to state 20
    assignmemt  go to state 23
    expr        go to state 51
    number      go to state 25
    call        go to state 26


state 33

   51 while_stm: T_TWHILE T_LPAREN . expr T_RPAREN block

    T_IDENTIFIER  shift, and go to state 7
    T_INTEGER     shift, and go to state 8
    T_DOUBLE      shift, and go to state 9
    T_LITERAL     shift, and go to state 10
    T_LPAREN      shift, and go to state 14

    ident       go to state 20
    assignmemt  go to state 23
    expr        go to state 52
    number      go to state 25
    call        go to state 26


state 34

   52 if_stat: T_IF T_LPAREN . expr T_RPAREN block
   53        | T_IF T_LPAREN . expr T_RPAREN block T_ELSE block

    T_IDENTIFIER  shift, and go to state 7
    T_INTEGER     shift, and go to state 8
    T_DOUBLE      shift, and go to state 9
    T_LITERAL     shift, and go to state 10
    T_LPAREN      shift, and go to state 14

    ident       go to state 20
    assignmemt  go to state 23
    expr        go to state 53
    number      go to state 25
    call        go to state 26


state 35

   30 expr: expr . T_PLUS expr
   31     | expr . T_MINUS expr
   32     | expr . T_MULT expr
   33     | expr . T_DIV expr
   34     | T_LPAREN expr . T_LPAREN

    T_LPAREN  shift, and go to state 54
    T_MINUS   shift, and go to state 44
    T_PLUS    shift, and go to state 45
    T_DIV     shift, and go to state 46
    T_MULT    shift, and go to state 47


state 36

    0 $accept: program $end .

    $default  accept


state 37

    3 stats: stats stat .

    $default  reduce using rule 3 (stats)


state 38

    4 stat: var_dec T_SEMICOLON .

    $default  reduce using rule 4 (stat)


state 39

   26 assignmemt: ident T_ASSIGN . expr

    T_IDENTIFIER  shift, and go to state 7
    T_INTEGER     shift, and go to state 8
    T_DOUBLE      shift, and go to state 9
    T_LITERAL     shift, and go to state 10
    T_LPAREN      shift, and go to state 14

    ident       go to state 20
    assignmemt  go to state 23
    expr        go to state 55
    number      go to state 25
    call        go to state 26


state 40

   39 call: ident T_LPAREN . call_args T_RPAREN

    T_IDENTIFIER  shift, and go to state 7
    T_INTEGER     shift, and go to state 8
    T_DOUBLE      shift, and go to state 9
    T_LITERAL     shift, and go to state 10
    T_LPAREN      shift, and go to state 14

    $default  reduce using rule 42 (call_args)

    ident       go to state 20
    assignmemt  go to state 23
    expr        go to state 56
    number      go to state 25
    call        go to state 26
    call_args   go to state 57


state 41

   25 array_typename: typename T_LBRACKET . T_INTEGER T_RBRACKET

    T_INTEGER  shift, and go to state 58


state 42

   12 func_dec: typename ident . T_LPAREN varvec T_RPAREN block
   17 var_dec: typename ident .
   18        | typename ident . T_ASSIGN expr

    T_ASSIGN  shift, and go to state 59
    T_LPAREN  shift, and go to state 60

    $default  reduce using rule 17 (var_dec)


state 43

    6 stat: expr T_SEMICOLON .

    $default  reduce using rule 6 (stat)


state 44

   31 expr: expr T_MINUS . expr

    T_IDENTIFIER  shift, and go to state 7
    T_INTEGER     shift, and go to state 8
    T_DOUBLE      shift, and go to state 9
    T_LITERAL     shift, and go to state 10
    T_LPAREN      shift, and go to state 14

    ident       go to state 20
    assignmemt  go to state 23
    expr        go to state 61
    number      go to state 25
    call        go to state 26


state 45

   30 expr: expr T_PLUS . expr

    T_IDENTIFIER  shift, and go to state 7
    T_INTEGER     shift, and go to state 8
    T_DOUBLE      shift, and go to state 9
    T_LITERAL     shift, and go to state 10
    T_LPAREN      shift, and go to state 14

    ident       go to state 20
    assignmemt  go to state 23
    expr        go to state 62
    number      go to state 25
    call        go to state 26


state 46

   33 expr: expr T_DIV . expr

    T_IDENTIFIER  shift, and go to state 7
    T_INTEGER     shift, and go to state 8
    T_DOUBLE      shift, and go to state 9
    T_LITERAL     shift, and go to state 10
    T_LPAREN      shift, and go to state 14

    ident       go to state 20
    assignmemt  go to state 23
    expr        go to state 63
    number      go to state 25
    call        go to state 26


state 47

   32 expr: expr T_MULT . expr

    T_IDENTIFIER  shift, and go to state 7
    T_INTEGER     shift, and go to state 8
    T_DOUBLE      shift, and go to state 9
    T_LITERAL     shift, and go to state 10
    T_LPAREN      shift, and go to state 14

    ident       go to state 20
    assignmemt  go to state 23
    expr        go to state 64
    number      go to state 25
    call        go to state 26


state 48

   13 func_dec: T_EXTERN typename ident . T_LPAREN varvec T_RPAREN T_SEMICOLON

    T_LPAREN  shift, and go to state 65


state 49

    7 stat: T_RETURN expr T_SEMICOLON .

    $default  reduce using rule 7 (stat)


state 50

   45 for_stm: T_TFOR T_LPAREN T_SEMICOLON . expr T_SEMICOLON T_RPAREN block
   46        | T_TFOR T_LPAREN T_SEMICOLON . T_SEMICOLON expr T_RPAREN block
   49        | T_TFOR T_LPAREN T_SEMICOLON . expr T_SEMICOLON expr T_RPAREN block
   50        | T_TFOR T_LPAREN T_SEMICOLON . T_SEMICOLON T_RPAREN block

    T_IDENTIFIER  shift, and go to state 7
    T_INTEGER     shift, and go to state 8
    T_DOUBLE      shift, and go to state 9
    T_LITERAL     shift, and go to state 10
    T_LPAREN      shift, and go to state 14
    T_SEMICOLON   shift, and go to state 66

    ident       go to state 20
    assignmemt  go to state 23
    expr        go to state 67
    number      go to state 25
    call        go to state 26


state 51

   30 expr: expr . T_PLUS expr
   31     | expr . T_MINUS expr
   32     | expr . T_MULT expr
   33     | expr . T_DIV expr
   43 for_stm: T_TFOR T_LPAREN expr . T_SEMICOLON expr T_SEMICOLON expr T_RPAREN block
   44        | T_TFOR T_LPAREN expr . T_SEMICOLON T_SEMICOLON T_RPAREN block
   47        | T_TFOR T_LPAREN expr . T_SEMICOLON expr T_SEMICOLON T_RPAREN block
   48        | T_TFOR T_LPAREN expr . T_SEMICOLON T_SEMICOLON expr T_RPAREN block

    T_SEMICOLON  shift, and go to state 68
    T_MINUS      shift, and go to state 44
    T_PLUS       shift, and go to state 45
    T_DIV        shift, and go to state 46
    T_MULT       shift, and go to state 47


state 52

   30 expr: expr . T_PLUS expr
   31     | expr . T_MINUS expr
   32     | expr . T_MULT expr
   33     | expr . T_DIV expr
   51 while_stm: T_TWHILE T_LPAREN expr . T_RPAREN block

    T_RPAREN  shift, and go to state 69
    T_MINUS   shift, and go to state 44
    T_PLUS    shift, and go to state 45
    T_DIV     shift, and go to state 46
    T_MULT    shift, and go to state 47


state 53

   30 expr: expr . T_PLUS expr
   31     | expr . T_MINUS expr
   32     | expr . T_MULT expr
   33     | expr . T_DIV expr
   52 if_stat: T_IF T_LPAREN expr . T_RPAREN block
   53        | T_IF T_LPAREN expr . T_RPAREN block T_ELSE block

    T_RPAREN  shift, and go to state 70
    T_MINUS   shift, and go to state 44
    T_PLUS    shift, and go to state 45
    T_DIV     shift, and go to state 46
    T_MULT    shift, and go to state 47


state 54

   34 expr: T_LPAREN expr T_LPAREN .

    $default  reduce using rule 34 (expr)


state 55

   26 assignmemt: ident T_ASSIGN expr .
   30 expr: expr . T_PLUS expr
   31     | expr . T_MINUS expr
   32     | expr . T_MULT expr
   33     | expr . T_DIV expr

    T_MINUS  shift, and go to state 44
    T_PLUS   shift, and go to state 45
    T_DIV    shift, and go to state 46
    T_MULT   shift, and go to state 47

    T_MINUS   [reduce using rule 26 (assignmemt)]
    T_PLUS    [reduce using rule 26 (assignmemt)]
    T_DIV     [reduce using rule 26 (assignmemt)]
    T_MULT    [reduce using rule 26 (assignmemt)]
    $default  reduce using rule 26 (assignmemt)


state 56

   30 expr: expr . T_PLUS expr
   31     | expr . T_MINUS expr
   32     | expr . T_MULT expr
   33     | expr . T_DIV expr
   41 call_args: expr .

    T_MINUS  shift, and go to state 44
    T_PLUS   shift, and go to state 45
    T_DIV    shift, and go to state 46
    T_MULT   shift, and go to state 47

    $default  reduce using rule 41 (call_args)


state 57

   39 call: ident T_LPAREN call_args . T_RPAREN
   40 call_args: call_args . T_COMMA expr

    T_RPAREN  shift, and go to state 71
    T_COMMA   shift, and go to state 72


state 58

   25 array_typename: typename T_LBRACKET T_INTEGER . T_RBRACKET

    T_RBRACKET  shift, and go to state 73


state 59

   18 var_dec: typename ident T_ASSIGN . expr

    T_IDENTIFIER  shift, and go to state 7
    T_INTEGER     shift, and go to state 8
    T_DOUBLE      shift, and go to state 9
    T_LITERAL     shift, and go to state 10
    T_LPAREN      shift, and go to state 14

    ident       go to state 20
    assignmemt  go to state 23
    expr        go to state 74
    number      go to state 25
    call        go to state 26


state 60

   12 func_dec: typename ident T_LPAREN . varvec T_RPAREN block

    T_TINT     shift, and go to state 1
    T_TDOUBLE  shift, and go to state 2
    T_TVOID    shift, and go to state 3
    T_TSTRING  shift, and go to state 4

    $default  reduce using rule 16 (varvec)

    varvec          go to state 75
    var_dec         go to state 76
    typename        go to state 77
    array_typename  go to state 22


state 61

   30 expr: expr . T_PLUS expr
   31     | expr . T_MINUS expr
   31     | expr T_MINUS expr .
   32     | expr . T_MULT expr
   33     | expr . T_DIV expr

    T_DIV   shift, and go to state 46
    T_MULT  shift, and go to state 47

    $default  reduce using rule 31 (expr)


state 62

   30 expr: expr . T_PLUS expr
   30     | expr T_PLUS expr .
   31     | expr . T_MINUS expr
   32     | expr . T_MULT expr
   33     | expr . T_DIV expr

    T_DIV   shift, and go to state 46
    T_MULT  shift, and go to state 47

    $default  reduce using rule 30 (expr)


state 63

   30 expr: expr . T_PLUS expr
   31     | expr . T_MINUS expr
   32     | expr . T_MULT expr
   33     | expr . T_DIV expr
   33     | expr T_DIV expr .

    $default  reduce using rule 33 (expr)


state 64

   30 expr: expr . T_PLUS expr
   31     | expr . T_MINUS expr
   32     | expr . T_MULT expr
   32     | expr T_MULT expr .
   33     | expr . T_DIV expr

    $default  reduce using rule 32 (expr)


state 65

   13 func_dec: T_EXTERN typename ident T_LPAREN . varvec T_RPAREN T_SEMICOLON

    T_TINT     shift, and go to state 1
    T_TDOUBLE  shift, and go to state 2
    T_TVOID    shift, and go to state 3
    T_TSTRING  shift, and go to state 4

    $default  reduce using rule 16 (varvec)

    varvec          go to state 78
    var_dec         go to state 76
    typename        go to state 77
    array_typename  go to state 22


state 66

   46 for_stm: T_TFOR T_LPAREN T_SEMICOLON T_SEMICOLON . expr T_RPAREN block
   50        | T_TFOR T_LPAREN T_SEMICOLON T_SEMICOLON . T_RPAREN block

    T_IDENTIFIER  shift, and go to state 7
    T_INTEGER     shift, and go to state 8
    T_DOUBLE      shift, and go to state 9
    T_LITERAL     shift, and go to state 10
    T_LPAREN      shift, and go to state 14
    T_RPAREN      shift, and go to state 79

    ident       go to state 20
    assignmemt  go to state 23
    expr        go to state 80
    number      go to state 25
    call        go to state 26


state 67

   30 expr: expr . T_PLUS expr
   31     | expr . T_MINUS expr
   32     | expr . T_MULT expr
   33     | expr . T_DIV expr
   45 for_stm: T_TFOR T_LPAREN T_SEMICOLON expr . T_SEMICOLON T_RPAREN block
   49        | T_TFOR T_LPAREN T_SEMICOLON expr . T_SEMICOLON expr T_RPAREN block

    T_SEMICOLON  shift, and go to state 81
    T_MINUS      shift, and go to state 44
    T_PLUS       shift, and go to state 45
    T_DIV        shift, and go to state 46
    T_MULT       shift, and go to state 47


state 68

   43 for_stm: T_TFOR T_LPAREN expr T_SEMICOLON . expr T_SEMICOLON expr T_RPAREN block
   44        | T_TFOR T_LPAREN expr T_SEMICOLON . T_SEMICOLON T_RPAREN block
   47        | T_TFOR T_LPAREN expr T_SEMICOLON . expr T_SEMICOLON T_RPAREN block
   48        | T_TFOR T_LPAREN expr T_SEMICOLON . T_SEMICOLON expr T_RPAREN block

    T_IDENTIFIER  shift, and go to state 7
    T_INTEGER     shift, and go to state 8
    T_DOUBLE      shift, and go to state 9
    T_LITERAL     shift, and go to state 10
    T_LPAREN      shift, and go to state 14
    T_SEMICOLON   shift, and go to state 82

    ident       go to state 20
    assignmemt  go to state 23
    expr        go to state 83
    number      go to state 25
    call        go to state 26


state 69

   51 while_stm: T_TWHILE T_LPAREN expr T_RPAREN . block

    T_LBRACE  shift, and go to state 84

    block  go to state 85


state 70

   52 if_stat: T_IF T_LPAREN expr T_RPAREN . block
   53        | T_IF T_LPAREN expr T_RPAREN . block T_ELSE block

    T_LBRACE  shift, and go to state 84

    block  go to state 86


state 71

   39 call: ident T_LPAREN call_args T_RPAREN .

    $default  reduce using rule 39 (call)


state 72

   40 call_args: call_args T_COMMA . expr

    T_IDENTIFIER  shift, and go to state 7
    T_INTEGER     shift, and go to state 8
    T_DOUBLE      shift, and go to state 9
    T_LITERAL     shift, and go to state 10
    T_LPAREN      shift, and go to state 14

    ident       go to state 20
    assignmemt  go to state 23
    expr        go to state 87
    number      go to state 25
    call        go to state 26


state 73

   25 array_typename: typename T_LBRACKET T_INTEGER T_RBRACKET .

    $default  reduce using rule 25 (array_typename)


state 74

   18 var_dec: typename ident T_ASSIGN expr .
   30 expr: expr . T_PLUS expr
   31     | expr . T_MINUS expr
   32     | expr . T_MULT expr
   33     | expr . T_DIV expr

    T_MINUS  shift, and go to state 44
    T_PLUS   shift, and go to state 45
    T_DIV    shift, and go to state 46
    T_MULT   shift, and go to state 47

    $default  reduce using rule 18 (var_dec)


state 75

   12 func_dec: typename ident T_LPAREN varvec . T_RPAREN block
   14 varvec: varvec . T_COMMA var_dec

    T_RPAREN  shift, and go to state 88
    T_COMMA   shift, and go to state 89


state 76

   15 varvec: var_dec .

    $default  reduce using rule 15 (varvec)


state 77

   17 var_dec: typename . ident
   18        | typename . ident T_ASSIGN expr
   25 array_typename: typename . T_LBRACKET T_INTEGER T_RBRACKET

    T_IDENTIFIER  shift, and go to state 7
    T_LBRACKET    shift, and go to state 41

    ident  go to state 90


state 78

   13 func_dec: T_EXTERN typename ident T_LPAREN varvec . T_RPAREN T_SEMICOLON
   14 varvec: varvec . T_COMMA var_dec

    T_RPAREN  shift, and go to state 91
    T_COMMA   shift, and go to state 89


state 79

   50 for_stm: T_TFOR T_LPAREN T_SEMICOLON T_SEMICOLON T_RPAREN . block

    T_LBRACE  shift, and go to state 84

    block  go to state 92


state 80

   30 expr: expr . T_PLUS expr
   31     | expr . T_MINUS expr
   32     | expr . T_MULT expr
   33     | expr . T_DIV expr
   46 for_stm: T_TFOR T_LPAREN T_SEMICOLON T_SEMICOLON expr . T_RPAREN block

    T_RPAREN  shift, and go to state 93
    T_MINUS   shift, and go to state 44
    T_PLUS    shift, and go to state 45
    T_DIV     shift, and go to state 46
    T_MULT    shift, and go to state 47


state 81

   45 for_stm: T_TFOR T_LPAREN T_SEMICOLON expr T_SEMICOLON . T_RPAREN block
   49        | T_TFOR T_LPAREN T_SEMICOLON expr T_SEMICOLON . expr T_RPAREN block

    T_IDENTIFIER  shift, and go to state 7
    T_INTEGER     shift, and go to state 8
    T_DOUBLE      shift, and go to state 9
    T_LITERAL     shift, and go to state 10
    T_LPAREN      shift, and go to state 14
    T_RPAREN      shift, and go to state 94

    ident       go to state 20
    assignmemt  go to state 23
    expr        go to state 95
    number      go to state 25
    call        go to state 26


state 82

   44 for_stm: T_TFOR T_LPAREN expr T_SEMICOLON T_SEMICOLON . T_RPAREN block
   48        | T_TFOR T_LPAREN expr T_SEMICOLON T_SEMICOLON . expr T_RPAREN block

    T_IDENTIFIER  shift, and go to state 7
    T_INTEGER     shift, and go to state 8
    T_DOUBLE      shift, and go to state 9
    T_LITERAL     shift, and go to state 10
    T_LPAREN      shift, and go to state 14
    T_RPAREN      shift, and go to state 96

    ident       go to state 20
    assignmemt  go to state 23
    expr        go to state 97
    number      go to state 25
    call        go to state 26


state 83

   30 expr: expr . T_PLUS expr
   31     | expr . T_MINUS expr
   32     | expr . T_MULT expr
   33     | expr . T_DIV expr
   43 for_stm: T_TFOR T_LPAREN expr T_SEMICOLON expr . T_SEMICOLON expr T_RPAREN block
   47        | T_TFOR T_LPAREN expr T_SEMICOLON expr . T_SEMICOLON T_RPAREN block

    T_SEMICOLON  shift, and go to state 98
    T_MINUS      shift, and go to state 44
    T_PLUS       shift, and go to state 45
    T_DIV        shift, and go to state 46
    T_MULT       shift, and go to state 47


state 84

   11 block: T_LBRACE . stats T_RBRACE

    T_TINT        shift, and go to state 1
    T_TDOUBLE     shift, and go to state 2
    T_TVOID       shift, and go to state 3
    T_TSTRING     shift, and go to state 4
    T_EXTERN      shift, and go to state 5
    T_RETURN      shift, and go to state 6
    T_IDENTIFIER  shift, and go to state 7
    T_INTEGER     shift, and go to state 8
    T_DOUBLE      shift, and go to state 9
    T_LITERAL     shift, and go to state 10
    T_TFOR        shift, and go to state 11
    T_TWHILE      shift, and go to state 12
    T_IF          shift, and go to state 13
    T_LPAREN      shift, and go to state 14
